<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/add_party_menu_item"
          android:icon="@drawable/new_party_menu_icon"
          android:title="@string/CREATE_NEW_ACTIVITY"
          android:showAsAction="ifRoom|withText" />
    <item android:id="@+id/search_parties_menu_item"
          android:icon="@drawable/search_parties_menu_icon"
          android:title="@string/FIND_ACTIVITIES_BUTTON"
          android:showAsAction="ifRoom|withText" />
    <item android:title="@string/LOGOUT_MENU_ITEM_TEXT"
          android:id="@+id/logout"
          android:showAsAction="never" />
    <item android:title="@string/CREDITS_LABEL"
          android:id="@+id/credits"
          android:showAsAction="never" />
    <item android:title="DEBUG MASTER DETAIL"
          android:id="@+id/masterdetail"
          android:showAsAction="never"
          android:visible="false"
            ></item>
</menu>