<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

        <TextView
                android:id="@+id/create_party"
                android:text="@string/CREATE_NEW_ACTIVITY_INTRODUCTION"
                android:layout_height="wrap_content"
                android:layout_width="260dp"
                android:textColor="#aaa"
                android:textSize="12sp"
                android:gravity="center"
                android:layout_gravity="center"/>

        <Spinner
                android:id="@+id/categorySpinner"
                style="@style/CommonPartyButton"
                android:prompt="@string/SELECT_CATEGORY_TITLE"/>

        <Spinner
                android:id="@+id/levelSpinner"
                android:prompt="@string/EXPERIENCE_LABEL"
                style="@style/CommonPartyButton"/>

        <Button
                style="@style/CommonPartyButton"
                android:id="@+id/partyTimeButton"
                android:text="Placehodler for Time"/>

        <Button
                style="@style/CommonPartyButton"
                android:id="@+id/numberOfParticipantsButton"
                android:text="Placehodler for Participants"/>

        <Button
                style="@style/CommonPartyButton"
                android:id="@+id/partyLocationButton"
                android:text="@string/LOCATION_BUTTON_WAITING_TEXT"/>

        <Button
                style="@style/CommonPartyButton"
                android:text="@string/DESCRIBE_ACTIVITY"
                android:id="@+id/addSubjectButton"/>

        <ViewSwitcher
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/viewSwitcher"
                android:layout_gravity="center_vertical|center_horizontal">

            <ProgressBar android:indeterminate="true"
                         android:layout_width="50dp" android:layout_height="50dp"
                         android:id="@+id/partyPictureProgressBar" style="?android:attr/progressBarStyle"
                         android:layout_gravity="center_vertical|center_horizontal"/>

            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:id="@+id/partyPicture"
                    android:layout_gravity="center"
                    android:src="@android:drawable/progress_indeterminate_horizontal"/>
            </ViewSwitcher>

        <Space
                android:layout_width="fill_parent"
                android:layout_height="40px"
                android:id="@+id/space"/>

    </LinearLayout>
</ScrollView>