<?xml version="1.0" encoding="utf-8"?>

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="horizontal"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:rowCount="5"
              android:columnCount="2"
              android:background="@drawable/gradient_background">

    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/imageView" android:layout_gravity="center"
            android:src="@drawable/androidmarker"
            android:layout_column="0" android:layout_row="0" android:layout_columnSpan="2"
            android:layout_margin="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/DATE_TIME_LABEL"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/dateLabel" android:layout_margin="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/dateValue" android:layout_margin="5dp"
            android:textColor="#000000"
            android:textSize="14sp"
            android:layout_gravity="center_horizontal"
            android:text="10.10.2012"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/PARTY_SIZE"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/sizeLabel" android:layout_margin="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/sizeValue" android:layout_gravity="center" android:layout_margin="5dp" android:text="5"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/EXPERIENCE_LABEL"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/experienceLabel" android:layout_margin="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/experienceValue" android:layout_gravity="center" android:layout_margin="5dp"
            android:text="asdf"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/USER_LABEL"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/userLabel" android:layout_margin="5dp"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textSize="14sp"
            android:id="@+id/userValue" android:layout_gravity="center" android:layout_margin="5dp"
            android:text="asdfasdf" android:autoLink="email"/>


</GridLayout>